--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,9 +12,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: conda-incubator/setup-miniconda@v2
         with:
-          activate-environment: test
-          environment-file: environment.yml
-          python-version: 3.8
+          activate-environment: pyoccenv
+          python-version: 3.9
           auto-activate-base: false
       - shell: bash -l {0}
         run: |
@@ -23,9 +22,8 @@ jobs:
       - name: Lint
         shell: bash -l {0}
         run: |
-            conda install flake8
-            python -m flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-            python -m flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+          source activate pyoccenv
+          conda install -c conda-forge pythonocc-core=7.7.2      
       - name: Run pytest
         shell: bash -l {0}
         run: |
