--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,8 +27,11 @@ jobs:
       - name: echo paths
         shell: bash -l {0}
         run: |
-          python import OCC
-          python OCC.__file__
+          echo pwd :
+          pwd
+          echo ls :
+          ls
+          
         # echo $(conda info --all)
           # echo Ceux qui match :
           # echo $(conda info --all | grep -i pythonocc-core)
