--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,8 @@ jobs:
       - name: echo paths
         shell: bash -l {0}
         run: |
-          cd\home/runner/conda_pkgs_dir
+          cd /
+          cd home/runner/conda_pkgs_dir
           echo pwd :
           pwd
           echo ls :
