--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
       - name: echo paths
         shell: bash -l {0}
         run: |
-          cd /usr/share/miniconda
+          cd /usr/share/miniconda/env/pyoccenv/lib/site-packages
           ls
           
         # echo $(conda info --all)
