--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
         matrix:
-            os: ["macos-latest"]
+            os: ["windows-latest"]
             #"ubuntu-latest", "windows-latest", "macos-latest"]
     steps:
       - uses: actions/checkout@v3
@@ -38,5 +38,5 @@ jobs:
           # echo "PYOCCPATH=$(conda info --all  | grep -i pythonocc-core)" >> $GITHUB_ENV
       - uses: actions/upload-artifact@v3
         with:
-          name: OCC-artifact
+          name: OCC-wind
           path: /usr/local/miniconda/envs/pyoccenv/lib/python3.9/site-packages/OCC/
