--- a/.github/workflows/build_pyocct_linux.yml
+++ b/.github/workflows/build_pyocct_linux.yml
@@ -128,12 +128,16 @@ jobs:
         run: |
           swig -version
           echo "/opt/hostedtoolcache/swig" >> $GITHUB_PATH
-    
+          echo "/opt/hostedtoolcache/swig" >> $GITHUB_ENV
+          
       - name: 3rd party pyocct
         run: |
           sudo apt-get update
           sudo apt-get install -y wget libglu1-mesa-dev libgl1-mesa-dev libxmu-dev libxi-dev build-essential cmake libfreetype6-dev tk-dev python3-dev rapidjson-dev python3 git python3-pip libpcre2-dev
-
+          sudo apt-get install python3.11
+          dpkg -L python3.11
+          echo "PYTHONPATH=/opt/hostedtoolcache/Python/3.11.8" >> $GITHUB_ENV
+          
       - name: cmake configure
         run: |
           cd ../
