--- a/.github/workflows/build_pyocct_linux.yml
+++ b/.github/workflows/build_pyocct_linux.yml
@@ -135,7 +135,10 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y wget libglu1-mesa-dev libgl1-mesa-dev libxmu-dev libxi-dev build-essential cmake libfreetype6-dev tk-dev python3-dev rapidjson-dev python3 git python3-pip libpcre2-dev
           sudo apt-get install python3.11
+          echo ..
+          echo ..
           dpkg -L python3.11
+          echo ..
           echo "PYTHONPATH=/opt/hostedtoolcache/Python/3.11.8" >> $GITHUB_ENV
           
       - name: cmake configure
