--- a/.github/workflows/build_pyocct_linux.yml
+++ b/.github/workflows/build_pyocct_linux.yml
@@ -116,20 +116,21 @@ jobs:
       - name: 3rd party pyocct
         run: |
           sudo apt-get update
-          sudo apt-get install -y wget libglu1-mesa-dev libgl1-mesa-dev libxmu-dev libxi-dev build-essential cmake libfreetype6-dev tk-dev python3-dev rapidjson-dev python3 git python3-pip libpcre2-dev
           sudo apt-get install python3.11
+          Python3_INCLUDE_DIRS Python3_LIBRARIES
+          echo "PYTHONPATH=/usr/bin/python3.11" >> $GITHUB_ENV
           echo ..
+          echo lib python
           echo ..
-          dpkg -L python3.11
-          echo ..
-          echo "PYTHONPATH=/usr/lib/python3.11" >> $GITHUB_ENV
-          echo ..
-          cd /usr/lib
+          cd /usr/lib/python3.11
           ls
+          echo ..
+          echo bin
           echo ..
           cd /usr/bin
           ls
-
+          sudo apt-get install -y wget libglu1-mesa-dev libgl1-mesa-dev libxmu-dev libxi-dev build-essential cmake libfreetype6-dev tk-dev python3-dev rapidjson-dev python3 git python3-pip libpcre2-dev
+  
       - name: download pyocc source 7.7.2
         run: |
           cd ../
