--- a/.github/workflows/build_pyocct_linux.yml
+++ b/.github/workflows/build_pyocct_linux.yml
@@ -116,30 +116,11 @@ jobs:
       - name: 3rd party pyocct
         run: |
           sudo apt-get update
-          sudo apt-get install python3.11
-          echo "PYTHONPATH=/usr/bin/python3.11" >> $GITHUB_PATH
-      - name: python paths
-        run: |
-          echo python includes
-          python -c "from sysconfig import get_paths as gp; print(gp()[\"include\"])"
-          
-          echo ..
-          echo lib python
-          echo ..
-          cd /usr/lib/python3.11
-          ls
-          echo ..
-          echo bin
-          echo ..
-          cd /usr/bin
-          ls
-          echo ..
-          echo usr
-          echo ..
-          cd /usr
-          ls
+          sudo apt-get install python3 python3-dbg
+        # sudo apt-get install python3.11
+        # echo "PYTHONPATH=/usr/bin/python3.11" >> $GITHUB_PATH
 
-      - name: 3rd party
+      - name: aaaaaaa
         run: |
           sudo apt-get install -y wget libglu1-mesa-dev libgl1-mesa-dev libxmu-dev libxi-dev build-essential cmake libfreetype6-dev tk-dev python3-dev rapidjson-dev python3 git python3-pip libpcre2-dev
   
@@ -164,9 +145,7 @@ jobs:
           mkdir pyocc_mon_install
           cd pythonocc-core-7.7.2
           mkdir ma_build
-          cmake -DPython3_LIBRARIES=/usr/lib/python3.11 \
-          -DPython3_INCLUDE_DIRS=/usr/include/python3.11 \
-          -DOCCT_INCLUDE_DIR="/home/runner/work/SurfacePsycho/OCCT_mon_install/include/opencascade" \
+          cmake -DOCCT_INCLUDE_DIR="/home/runner/work/SurfacePsycho/OCCT_mon_install/include/opencascade" \
           -DOCCT_LIBRARY_DIR="/home/runner/work/SurfacePsycho/OCCT_mon_install/lib" \
           -DPYTHONOCC_BUILD_TYPE=Release \
           -DPYTHONOCC_INSTALL_DIRECTORY="/home/runner/work/SurfacePsycho/pyocc_mon_install" \
@@ -177,6 +156,8 @@ jobs:
           cd ../
           7z a hhhh /home/runner/work/SurfacePsycho/pythonocc-core-7.7.2/
           ls
+        # -DPython3_LIBRARIES=/usr/lib/python3.11 \
+        # -DPython3_INCLUDE_DIRS=/usr/include/python3.11 \
           
       - uses: actions/upload-artifact@v4
         with:
