--- a/.github/workflows/build_pyocct_linux.yml
+++ b/.github/workflows/build_pyocct_linux.yml
@@ -85,13 +85,39 @@ jobs:
         path: /home/runner/work/SurfacePsycho/OCCT_mon_install
         key: occinstall-${{ runner.os }}-${{ hashFiles('**/lockfiles') }}
 
-    #- name: build swig
-     # run: |
-     #   cd ../../
-      #  wget http://prdownloads.sourceforge.net/swig/swig-4.1.1.tar.gz
-       # tar -zxvf swig-4.1.1.tar.gz
-        #cd swig-4.1.1
-        #sudo ./configure && make -j4 && make install
+
+
+
+
+  build-swig:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Restore cached occt
+      id: cache-restore
+      uses: actions/cache/restore@v4
+      with:
+        path: /home/runner/work/SurfacePsycho/swig-4.1.1
+        key: swig-${{ runner.os }}-${{ hashFiles('**/lockfiles') }}
+        lookup-only: true
+
+    - run: |
+        sudo apt-get install -y libpcre2-dev    
+        cd /home/runner/work/SurfacePsycho/
+        wget http://prdownloads.sourceforge.net/swig/swig-4.1.1.tar.gz
+        tar -zxvf swig-4.1.1.tar.gz
+        cd swig-4.1.1
+        sudo ./configure && make -j4 && make install
+
+    - name: Save cache swig build
+      id: cache-save
+      if: steps.cache-restore.outputs.cache-hit != 'true'
+      uses: actions/cache/save@v4
+      with:
+        path: /home/runner/work/SurfacePsycho/swig-4.1.1
+        key: swig-${{ runner.os }}-${{ hashFiles('**/lockfiles') }}
 
 
 
@@ -111,19 +137,25 @@ jobs:
            path: /home/runner/work/SurfacePsycho/OCCT_mon_install
            key: occinstall-${{ runner.os }}-${{ hashFiles('**/lockfiles') }}
 
-      # echo "::set-env name=PYTHONPATH::C:\hostedtoolcache\windows\Python\3.11.8\x64"
-      #echo "::set-env name=PYTHONPATH::home/runner/work/SurfacePsycho"
+
+      - name: restor swig
+        id: restore-swig
+        uses: actions/cache/restore@v4
+        with:
+           path: /home/runner/work/SurfacePsycho/swig-4.1.1
+           key: swig-${{ runner.os }}-${{ hashFiles('**/lockfiles') }}
+        
+      - name: install swig
+        run: |
+          cd home/runner/work/SurfacePsycho/swig-4.1.1
+          sudo make install
+
       - name: 3rd party pyocct
         run: |
           sudo apt-get update
-          sudo apt-get install python3 python3-dbg
-        # sudo apt-get install python3.11
-        # echo "PYTHONPATH=/usr/bin/python3.11" >> $GITHUB_PATH
+          sudo apt-get install -y libglu1-mesa-dev libgl1-mesa-dev libxmu-dev libxi-dev build-essential libfreetype6-dev tk-dev python3-dev rapidjson-dev python3 git python3-pip libpcre2-dev
+        # sudo apt-get install python3-dbg
 
-      - name: aaaaaaa
-        run: |
-          sudo apt-get install -y wget libglu1-mesa-dev libgl1-mesa-dev libxmu-dev libxi-dev build-essential cmake libfreetype6-dev tk-dev python3-dev rapidjson-dev python3 git python3-pip libpcre2-dev
-  
       - name: download pyocc source 7.7.2
         run: |
           cd /home/runner/work/SurfacePsycho/
