--- a/.github/workflows/build_pyocct_linux.yml
+++ b/.github/workflows/build_pyocct_linux.yml
@@ -113,6 +113,7 @@ jobs:
     
     - name: make
       run: |    
+        cd /home/runner/work/SurfacePsycho/swig-4.1.1
         ./configure && make -j4 && make install
 
     - name: Save cache swig build
