--- a/.github/workflows/build_pyocct_linux.yml
+++ b/.github/workflows/build_pyocct_linux.yml
@@ -104,6 +104,7 @@ jobs:
         lookup-only: true
 
     - name: download
+      if: steps.cache-restore.outputs.cache-hit != 'true'
       run: |
         sudo apt-get install -y libpcre2-dev    
         cd /home/runner/work/SurfacePsycho/
@@ -112,6 +113,7 @@ jobs:
         cd swig-4.1.1
     
     - name: make
+      if: steps.cache-restore.outputs.cache-hit != 'true'
       run: |    
         cd /home/runner/work/SurfacePsycho/swig-4.1.1
         sudo ./configure 
