--- a/.github/workflows/build_pyocct_linux.yml
+++ b/.github/workflows/build_pyocct_linux.yml
@@ -158,11 +158,11 @@ jobs:
           cd /home/runner/work/SurfacePsycho/swig-4.1.1
           sudo make install
           echo .................................
-          cd /usr/local/share/swig
+          cd /usr/local/bin/swig
           ls
 
 
-          PATH="/usr/local/bin/swig:$PATH"
+          sudo PATH="/usr/local/bin/swig:$PATH"
           echo "/home/runner/work/SurfacePsycho/OCCT_mon_install/lib" >> /etc/ld.so.conf.d/occt.conf
 
       - name: 3rd party pyocct
